testsuite/bsc.typechecker/kind/TypeAliasResGivenNumIsNonNumParam.bs.bsc-out.expected
checking package dependencies
compiling TypeAliasResGivenNumIsNonNumParam.bs
Error: "TypeAliasResGivenNumIsNonNumParam.bs", line 3, column 25: (T0026)
  The value type `a' was found where a numeric type was expected.
