testsuite/bsc.typechecker/kind/TypeAliasResGivenNumIsNonNumParam.bs
package TypeAliasResGivenNumIsNonNumParam () where

type (Foo :: * -> #) a = a

